Update des fichiers source Display et sprite Ajout d'un gameManager(Fonction update, elle sera utilisée pour update toutes les instances du jeu)

--- a/ProgrammerEn_C_NL_V2_0.cbp
+++ b/ProgrammerEn_C_NL_V2_0.cbp
@@ -39,6 +39,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="GameManager.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="GameManager.h" />
 		<Unit filename="SDL_Display.c">
 			<Option compilerVar="CC" />
 		</Unit>
