Refactoring code GameManager/InputManager Gestion des instances eGameState, tKeyEventType et tEventType depuis le GameManager Ajout de la structure Gamestate(pour la gestion des états dans le jeu)

--- a/ProgrammerEn_C_NL_V2_0.cbp
+++ b/ProgrammerEn_C_NL_V2_0.cbp
@@ -43,6 +43,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="GameManager.h" />
+		<Unit filename="InputManager.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="InputManager.h" />
 		<Unit filename="SDL_Display.c">
 			<Option compilerVar="CC" />
 		</Unit>
