--- a/ProgrammerEn_C_NL_V2_0.cbp
+++ b/ProgrammerEn_C_NL_V2_0.cbp
@@ -39,10 +39,18 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="EngineManager.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="EngineManager.h" />
 		<Unit filename="GameManager.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="GameManager.h" />
+		<Unit filename="GameState.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="GameState.h" />
 		<Unit filename="InputManager.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -62,6 +70,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="viewport.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="viewport.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
